--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -3007,6 +3007,11 @@ button:disabled,
       min-width: 350px;
       left: -165px;
     }
+    &.max225 {
+      min-width: 225px;
+      left: -103px;
+      text-align: right;
+    }
   }
 
   .tooltip-icon {
@@ -3199,7 +3204,7 @@ button:disabled,
 
     td,
     th {
-      padding: 0.71rem 30px;
+      padding: 0.71rem 15px;
     }
   }
 
@@ -3496,7 +3501,7 @@ body {
 .costing-details-page {
   .accordian-row {
     >td {
-      padding: 15px 30px;
+      padding: 15px;
     }
   }
 }
